--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native-maps": "~0.25.0",
     "react-native-responsive-dimensions": "^3.0.0",
     "react-native-web": "^0.11.7",
-    "react-navigation": "^3.12.0"
+    "react-navigation": "^3.12.0",
+    "react-navigation-stack": "^1.10.3"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.0.0",
