--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@expo/samples": "~3.0.3",
     "@expo/vector-icons": "^10.0.3",
+    "@react-native-community/geolocation": "^2.0.2",
     "@react-navigation/web": "^1.0.0-alpha.9",
     "expo": "^35.0.0",
     "expo-asset": "^7.0.0",
@@ -30,7 +31,8 @@
     "react-native-responsive-dimensions": "^3.0.0",
     "react-native-web": "^0.11.7",
     "react-navigation": "^3.12.0",
-    "react-navigation-stack": "^1.10.3"
+    "react-navigation-stack": "^1.10.3",
+    "expo-location": "~7.0.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.0.0",
