--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-constants": "^7.0.0",
     "expo-font": "^7.0.0",
     "expo-google-sign-in": "~7.0.0",
+    "expo-location": "~7.0.0",
     "expo-web-browser": "^7.0.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
@@ -29,10 +30,10 @@
     "react-native-gesture-handler": "~1.3.0",
     "react-native-maps": "~0.25.0",
     "react-native-responsive-dimensions": "^3.0.0",
+    "react-native-svg": "9.9.5",
     "react-native-web": "^0.11.7",
     "react-navigation": "^3.12.0",
-    "react-navigation-stack": "^1.10.3",
-    "expo-location": "~7.0.0"
+    "react-navigation-stack": "^1.10.3"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.0.0",
